--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
      branches: 
      - branch1
 jobs: 
-   build-and-deploy:
+   build:
      runs-on: macOS
      steps:
      - name: checkout 
