--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
      - branch1
 jobs: 
    build:
-     runs-on: macOS
+     runs-on: macos-latest
      steps:
      - name: checkout 
        uses: actions/checkout@v1
