--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: ap-south-1
      - name: deploy static site to s3 bucket 
-       run: aws s3 sync . s3://tws-portfolio --delete
+       run: aws s3 sync . s3://githubaction-buckets --delete
          
         
           
